kubernetes/apps/metube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metube
  namespace: default
spec:
  selector:
    app: metube
  ports:
    - port: 80
      targetPort: 8081
